--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -2,7 +2,7 @@
     <nav>
         <div class="nav-left">
             <h1>Issue Tracker</h1>
-            <h3>All Rights Reserved © Akshay Kumar</h3>
+            <h3>All Rights Reserved</h3>
         </div>
     </nav>
 </footer>
